--- a/components/cube/cube-style.scss
+++ b/components/cube/cube-style.scss
@@ -1,4 +1,4 @@
-@import 'functions';
+@import 'vars';
 
 .cube {
   position:relative;
@@ -23,14 +23,14 @@
     position:absolute;
     width:100%;
     height:100%;
-    border: 3px solid getColor(white);
+    border: 3px solid map-get($colors, white);
   }
 
   .cube__outer .cube__face {
-    background:transparentize(getColor(malibu), 0.5);
+    background:transparentize(map-get($colors, malibu), 0.5);
   }
 
   .cube__inner .cube__face {
-    background:getColor(denim);
+    background:map-get($colors, denim);
   }
 }
