--- a/components/page/page-style.scss
+++ b/components/page/page-style.scss
@@ -43,5 +43,10 @@
     right: 1.75em;
     font-size: getFontSize(-1);
     text-transform: uppercase;
+    color: map-get($colors, denim);
+  }
+
+  &:hover {
+    color: map-get($colors, malibu);
   }
 }
