--- a/components/vote/app-style.scss
+++ b/components/vote/app-style.scss
@@ -1,35 +1,11 @@
 @import 'vars';
 @import 'mixins';
-@import 'functions';
 
 .vote-app {
-  margin: 1.5em;
-
-  &__influence-descriptions {
-    display: flex;
-    flex-direction: column;
-
-    @include break(medium) {
-      flex-direction: row;
-    }
-  }
-
-  &__influence-section {
-    flex: 0 0 100%;
-  }
-
-  &__influence-disclaimer {
-    padding: 1em 0;
-    flex: 0 0 100%;
-    font-size: smaller;
-    color: red;
-    @include break(medium) {
-      text-align: center;
-    }
-  }
-
   &__self-info {
-    margin-top: 10px;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
   }
 
   &__update-button {
@@ -56,15 +32,23 @@
     }
   }
 
-  &__item-table td {
-    vertical-align: middle;
+  &__vote-list {
+    display: flex;
+
+    & > li {
+      display: block;
+      padding: 5px;
+      flex: 2;
+      text-align: center;
+    }
+
+    & > .vote-app__vote-score {
+      flex: 1;
+      width: auto;
+      font-size: 150%;
+    }
   }
 
-  &__item-score {
-    font-size: 150%;
-    width: 90px;
-    text-align: right;
-  }
 
   &__items-list {
     display: block;
@@ -72,31 +56,63 @@
     & > li {
       display: block;
       padding: 5px;
+      border: 1px solid black;
+      border-top: inherit;
+
+      &:first-child {
+        border-top: 1px solid black;
+      }
     }
   }
 
-  &__currency-influence, &__vote-influence {
+  &__vote-buttons {
+    display: flex;
+  }
+
+  &__vote-positive {
+    text-align: left;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    > * {
+      height: 20px;
+    }
+  }
+
+  &__vote-negative {
+    text-align: right;
+    flex: 1;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    > * {
+      height: 20px;
+    }
+  }
+
+  &__currency-influence, &__vote-influence &__vote-value {
     color: blue;
     &:before {
       content: "♦\2009";
     }
   }
 
-  &__currency-goldenInfluence, &__vote-golden {
+  &__currency-goldenInfluence, &__vote-golden &__vote-value {
     color: #bfa203;
     &:before {
       content: "♦\2009";
     }
   }
 
-  &__currency-support, &__vote-support {
+  &__currency-support, &__vote-support &__vote-value {
     color: green;
     &:before {
       content: "$\2009";
     }
   }
 
-  &__vote-thumb {
+  &__vote-thumb &__vote-value {
 
   }
 
