--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,7 @@
 
 @import './reset';
 @import './fonts';
+@import './icons';
 
 * {
   box-sizing: inherit;
@@ -21,33 +22,24 @@ html {
 
 body {
   font: 400 getFontSize(0) 'Cabin', 'Century Gothic', sans-serif;
-  color: getColor(emperor);
+  color: map-get($colors, emperor);
 }
 
 a {
-  color: lighten(getColor(denim), 5%);
+  color: map-get($colors, tussock);
   text-decoration: none;
   transition: color 250ms;
 
+  &:hover {
+    color: darken(map-get($colors, tussock), 15%);
+  }
+
   &.icon-link {
     display: inline-block;
+    margin-left: 0.5em;
     font-size: 0.7em;
-    margin-left: 16px;
-    transform: rotate(-45deg);
-    color:lighten(getColor(dusty-grey), 10%);
-
-    &:hover {
-      color: lighten(getColor(denim), 5%);
-    }
+    transform: rotate(-135deg);
   }
-
-  &:hover {
-    color: darken(getColor(denim), 5%);
-  }
-}
-
-::selection {
-  background: transparentize(getColor(malibu), 0.65);
 }
 
 @import './markdown';
