Added font stack definitions to _vars

--- a/styles/partials/_vars.scss
+++ b/styles/partials/_vars.scss
@@ -18,3 +18,7 @@ $screens: (
   large: 1024px,
   medium: 768px
 );
+
+$font-stack-body: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+$font-stack-code: 'Source Code Pro', Monaco, monospace;
+
