--- a/styles/partials/_vars.scss
+++ b/styles/partials/_vars.scss
@@ -20,5 +20,5 @@ $screens: (
 );
 
 $font-stack-body: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$font-stack-code: 'Source Code Pro', Monaco, monospace;
+$font-stack-code: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
 
