Changing body color to elephant

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,7 +20,7 @@ html {
 
 body {
   font: 400 getFontSize(0) $font-stack-body;
-  color: getColor(emperor);
+  color: getColor(elephant);
 }
 
 a {
