New custom theme for prism

--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -1,8 +1,7 @@
 // Markdown styling is based on https://gist.github.com/tuzz/3331384.
-
 @import 'vars';
 @import 'functions';
-@import '~prismjs/themes/prism-funky';
+@import 'prism-theme';
 
 .page__content,
 .splash__section {
@@ -166,16 +165,16 @@
     white-space: nowrap;
     background-color: transparentize(getColor(fiord), 0.94);
     border-radius: 3px;
-    text-shadow: 0 1px 0 transparentize(getColor(white), 0.5);
-    color: getColor(elephant);
+    text-shadow: 0 1px 0 transparentize(getColor(white), 0.4);
   }
 
   pre {
-    background-color:getColor(mine-shaft);
+    background-color: rgba(238, 238, 238, 0.35);
+    background-color: getColor(elephant);
     font-size: 13px;
     line-height: 19px;
     overflow: auto;
-    padding: 6px 10px;
+    padding: 8px 16px;
     border-radius: 3px;
 
     code {
@@ -183,13 +182,25 @@
       padding: 0;
       white-space: pre;
       border: none;
-      color:getColor(concrete);
       background: transparent;
-      text-shadow: none;
+      text-shadow: 0 1px 0 transparentize(darken(getColor(elephant), 10%), 0.5);
+      color: desaturate(getColor(malibu), 40%);
 
       .code-details-summary-span {
         margin-left: -15px;
         cursor: pointer;
+      }
+
+      a {
+        border-bottom: 1px dotted getColor(denim);
+      }
+
+      .code-link {
+        position: relative;
+
+        &:hover {
+          color: lighten(getColor(denim), 15%);
+        }
       }
     }
 
