--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -16,7 +16,7 @@
   h6 { font-size: getFontSize(-1); }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Geomanist';
+    font-family: $font-stack-heading;
     font-weight:600;
     line-height:1;
     margin:1.5em 0 0.25em;
