--- a/styles/partials/_vars.scss
+++ b/styles/partials/_vars.scss
@@ -20,5 +20,8 @@ $screens: (
 );
 
 $font-stack-body: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+$font-stack-heading: Geomanist, sans-serif;
 $font-stack-code: 'Source Code Pro', Consolas, "Liberation Mono", Menlo, Courier, monospace;
+
+$text-color-highlight: lighten(map-get($colors, denim), 5%);
 
