Add a theme color for mobile browsers

--- a/template.ejs
+++ b/template.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title><%= webpackConfig.template.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#2B3A42">
     <link rel="shortcut icon" href="/assets/favicon.ico">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
