--- a/components/vote/button/button-style.scss
+++ b/components/vote/button/button-style.scss
@@ -15,3 +15,27 @@
     margin: 0;
   }
 }
+
+.vote-new-button {
+  display: flex;
+
+  &__arrows {
+    flex: 0 0 10%;
+  }
+
+  &__value {
+    font-size: 15pt;
+  }
+
+  &__value, &__my-value{
+    display: inline;
+    margin-left: 5px;
+    align-self: center;
+  }
+
+  &__upDown {
+    border: 0;
+    padding: 0;
+    margin: 0;
+  }
+}
