--- a/components/vote/button/button-style.scss
+++ b/components/vote/button/button-style.scss
@@ -38,4 +38,10 @@
     padding: 0;
     margin: 0;
   }
+
+  &__logout-value {
+    align-self: center;
+    font-size: 20pt;
+    margin: auto;
+  }
 }
