Remove unneeded script type attribute
See https://www.w3.org/TR/html5/scripting-1.html#attr-script-type “The default, which is used if the attribute is absent, is "text/javascript””

--- a/template.ejs
+++ b/template.ejs
@@ -20,7 +20,7 @@
     <%- webpackConfig.html %>
 
     <% for (var script of webpackConfig.template.jsFiles) { %>
-      <script src="<%= script %>" type="text/javascript"></script>
+      <script src="<%= script %>"></script>
     <% } %>
 
     <script>
