improve homepage styling

--- a/components/splash/splash-style.scss
+++ b/components/splash/splash-style.scss
@@ -7,6 +7,10 @@
     padding:5em 1em;
     text-align:center;
 
+    &:last-child {
+      padding-top: 0;
+    }
+
     @include break {
       padding:8em 1.5em;
     }
