--- a/components/vote/button/button-style.scss
+++ b/components/vote/button/button-style.scss
@@ -1,3 +1,7 @@
+@import 'vars';
+@import 'mixins';
+@import 'functions';
+
 .vote-button {
   text-align: center;
   &__value {
@@ -18,6 +22,11 @@
 
 .vote-new-button {
   display: flex;
+  justify-content: center;
+
+  @include break(medium) {
+    justify-content: inherit;
+  }
 
   &__arrows {
     flex: 0 0 10%;
@@ -37,6 +46,7 @@
     border: 0;
     padding: 0;
     margin: 0;
+    cursor: pointer;
   }
 
   &__logout-value {
