--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -22,6 +22,7 @@
   display: flex;
   font-size: 1.5em;
   position: absolute;
+  top: .64em;
   align-items: center;
   color: getColor(white);
   cursor: pointer;
