--- a/components/cube/cube-style.scss
+++ b/components/cube/cube-style.scss
@@ -23,14 +23,17 @@
     position:absolute;
     width:100%;
     height:100%;
-    border: 3px solid getColor(white);
+    border: 1px solid getColor(white);
   }
 
   .cube__outer .cube__face {
     background:transparentize(getColor(malibu), 0.5);
+    transition: border-width 0.2s;
+    transition-delay: 0.2s;
   }
 
   .cube__inner .cube__face {
     background:getColor(denim);
+    border: 2px solid getColor(white);
   }
 }
