--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -1,40 +1,16 @@
-@import 'vars';
 @import 'mixins';
 @import 'functions';
 
 .navigation {
   flex: 0 0 auto;
   transition: background 250ms;
-  background: map-get($colors, mine-shaft);
-
-  &--transparent {
-    position:relative;
-    display:flex;
-    justify-content: center;
-    background: transparent;
-    z-index:5;
-
-    .navigation__inner {
-      position:absolute;
-      left:0;
-
-      @include break {
-        left:auto;
-      }
-    }
-
-    .navigation__link:hover,
-    .navigation__mobile,
-    .navigation__search-input,
-    .navigation__search-icon:hover {
-      color: map-get($colors, emperor);
-    }
-  }
+  background: getColor(elephant);
 }
 
 .navigation__inner {
   display: flex;
   align-items: center;
+  position: relative;
   padding: 0.6em 1em;
 
   @include break {
@@ -45,14 +21,14 @@
 .navigation__mobile {
   display: flex;
   font-size: 1.5em;
-  margin-left: -1em;
+  position: absolute;
   align-items: center;
-  color: map-get($colors, white);
+  color: getColor(white);
   cursor: pointer;
   transition: color 250ms;
 
   &:active {
-    color: map-get($colors, alto);
+    color: getColor(alto);
   }
 
   @include break {
@@ -80,7 +56,7 @@
     display:inline-block;
     font-size: getFontSize(-1);
     text-transform: uppercase;
-    color: map-get($colors, dusty-grey);
+    color: getColor(white);
     transition:all 250ms;
     padding:1.5em 0.75em;
 
@@ -95,11 +71,11 @@
 
   &:hover,
   &--active {
-    color: map-get($colors, white);
+    color: getColor(white);
   }
 
   &--active {
-    background: map-get($colors, emperor);
+    background: lighten(getColor(elephant), 5%);
   }
 }
 
@@ -122,33 +98,34 @@
       width:0;
       font-size:14px;
       text-indent:0.5em;
-      border-bottom:1px solid map-get($colors, emperor);
+      border-bottom:1px solid getColor(fiord);
       margin-right:0;
-      color: map-get($colors, white);
-      text-shadow: 0 0 0 map-get($colors, concrete);
+      color: getColor(white);
+      text-shadow: 0 0 0 getColor(concrete);
       transition:all 250ms;
 
       &::-webkit-input-placeholder{
-        color:map-get($colors, dove-grey);
+        color: lighten(getColor(fiord), 10%);
         text-shadow: none;
         -webkit-text-fill-color: initial;
       }
     }
 
     &-icon {
-      display:inline-block;
-      font-size:getFontSize(1);
-      transform:rotate(-45deg);
-      font-weight:800;
-      color:map-get($colors, dusty-grey);
-      cursor:pointer;
-      background:transparent;
+      font-size:1em;
       padding:0;
       border:none;
+      cursor:pointer;
+      color:getColor(alto);
+      background:transparent;
       transition:color 250ms;
 
+      &.icon-cross {
+        display:none;
+      }
+
       &:hover {
-        color:map-get($colors, white);
+        color:getColor(white);
       }
     }
 
@@ -174,17 +151,30 @@
       margin-right:0.5em;
       width:400px;
     }
+
+    .navigation__search-icon.icon-cross {
+      display:block;
+    }
+
+    .navigation__search-icon.icon-magnifying-glass {
+      display:none;
+    }
   }
 }
 
 .navigation__bottom {
-  background:map-get($colors, emperor);
+  display:none;
+  background: lighten(getColor(elephant), 5%);
+
+  @include break {
+    display:block;
+  }
 }
 
 .navigation__child {
   font-size: getFontSize(-1);
   margin:0.5em 1em 0.6em;
-  color:map-get($colors, dusty-grey);
+  color:getColor(alto);
   text-transform: uppercase;
 
   &:first-of-type {
@@ -193,6 +183,6 @@
 
   &:hover,
   &--active {
-    color:map-get($colors, white);
+    color:getColor(white);
   }
 }
