--- a/components/splash-file/splash-file-style.scss
+++ b/components/splash-file/splash-file-style.scss
@@ -1,6 +1,7 @@
+@import 'functions';
+
 .splash-file {
   display:block;
-  flex:0 0 60%;
   margin-bottom:0.5em;
 
   &__img {
@@ -20,8 +21,9 @@
     &--ico { background-image:url(../../assets/file-ico.png); }
   }
 
-  &__name {
-
+  &__name,
+  &__size {
+    color:getColor(alto);
   }
 
   &__size {
