--- a/template.ejs
+++ b/template.ejs
@@ -13,6 +13,17 @@
       <link href="<%= webpackConfig.template.cssFiles[file] %>" rel="stylesheet">
     <% } %>
 
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?7e57fd0d33d298b4655048f502d55f48";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
+
     <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
   </head>
   <body>
