Minor change to font-weight of Title

--- a/components/vote/app-style.scss
+++ b/components/vote/app-style.scss
@@ -16,7 +16,7 @@
 
   &__title {
     font-size: 30pt;
-    font-weight: bold;
+    font-weight: 800;
     margin-bottom: 10px;
     margin-left: 5px;
   }
