allow to configure vote item
lock/unlock
archive/unarchive
edit title and description

--- a/components/vote/app-style.scss
+++ b/components/vote/app-style.scss
@@ -124,6 +124,14 @@
     margin-right: 10px;
   }
 
+  &__item-edit-title {
+    width: 100%;
+  }
+
+  &__item-edit-description {
+    width: 100%;
+  }
+
   &__currency-list {
     display: block;
 
