sidebar-mobile-style.scss font-size

--- a/components/sidebar-mobile/sidebar-mobile-style.scss
+++ b/components/sidebar-mobile/sidebar-mobile-style.scss
@@ -98,6 +98,7 @@
   text-transform: capitalize;
   color: getColor(dove-grey);
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  font-size: 14px;
 
   &:active,
   &--active {
