--- a/components/splash-viz/splash-viz-style.scss
+++ b/components/splash-viz/splash-viz-style.scss
@@ -42,7 +42,7 @@
     img {
       // Padding is needed to center align
       // webpack icon with the module image
-      padding-top: 3vw;
+      padding-top: 1.5em;
       width: 100%;
       height: 100%;
     }
@@ -56,6 +56,5 @@
     bottom: 0;
     margin: auto;
     z-index: 1;
-
   }
 }
