feat(splash): add additional sponsorship info in banner

--- a/components/notification-bar/notification-bar-style.scss
+++ b/components/notification-bar/notification-bar-style.scss
@@ -5,6 +5,10 @@
   color: getColor(white);
   background: getColor(emperor);
 
+  p:not(:last-child) {
+    padding-bottom: 1em;
+  }
+
   a {
     color: getColor(malibu);
 
