--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin control-overflow {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 @mixin fontantialias ($on) {
   @if $on == true {
     -webkit-font-smoothing: antialiased;
