--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -21,7 +21,11 @@
     margin:1.5em 0 0.25em;
     color:getColor(fiord);
 
-    &:first-child { margin-top:0; }
+    &:first-child {
+      margin-top: 0;
+      line-height: 1;
+    }
+
     tt, code { font-size: 90%; color: inherit }
   }
 
