--- a/components/contributors/contributors-style.scss
+++ b/components/contributors/contributors-style.scss
@@ -1,15 +1,17 @@
 @import 'functions';
+@import 'mixins';
 
 .contributors__list {
-  padding: 6px;
+  font-size: 14px;
+  margin-left: -0.5em;
+  padding-right: 75px;
 }
 
 .contributor {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 1em;
-  font-size: 14px;
+  margin: 0.5em;
 
   img {
     height: 45px;
@@ -19,14 +21,18 @@
   }
 
   .contributor__name {
-    color: getColor(fiord);
+    width: 110px;
     margin-top: -6px;
-    box-shadow: 0 0 2px rgba(0,0,0,0.3);
-    line-height: 1.4;
-    transition: color 0.1s;
     padding: 0 6px;
+    line-height: 1.4;
     border-radius: 2px;
+    text-align: center;
+    overflow-wrap: break-word;
+    hyphens: auto;
+    color: getColor(fiord);
+    box-shadow: 0 0 2px rgba(0,0,0,0.3);
     background: transparentize(getColor(white), 0.05);
+    transition: color 0.1s;
   }
 
   &:hover {
