refactor: fix formatting, tweak styling, and patch a few other issues with the new dropdown
For some reason editorconfig wasn't honored and tabs snuck in. Also
tweaked the logic in the language dropdown and moved it to the right
side of the navigation bar. Made some other minor styling and logic
tweaks for easier maintenance.

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -152,6 +152,11 @@
       color: getColor(malibu);
     }
   }
+
+  .navigation__languages {
+    margin-left: 1em;
+    margin-top: -4px;
+  }
 }
 
 @include break {
