--- a/components/dropdown/dropdown-style.scss
+++ b/components/dropdown/dropdown-style.scss
@@ -1,55 +1,66 @@
+@import 'functions';
 
 .dropdown {
-	position: relative;
-	color: #fff;
-	cursor: pointer;
-
+  position: relative;
+  color: #fff;
+  cursor: pointer;
 }
 
-.dropdown-language {
-	width: 20px;
-	height: 20px;
-	vertical-align: middle;
+.dropdown__language {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
 }
 
-.dropdown-arrow {
-	vertical-align: middle;
+.dropdown__arrow {
+  margin-left: 5px;
 
-	&:before {
-		display: inline-block;
-		margin-left: 5px;
-		content: "\25be";
-	}
+  &:before {
+    content: "\25be";
+  }
 }
 
-.dropdown-list {
-	display: none;
-	position: absolute;
-	width: 100%;
-	top: 45px;
-	left: -12px;
-	right: 0;
-	margin: auto;
-	background-color: #2B3A42;
-	z-index: 1;
-	text-align: center;
+.dropdown__list {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 100%;
+  right: 0;
+  margin: auto;
+  background-color: #2B3A42;
+  z-index: 1;
+  text-align: center;
 
-	ul li {
-		list-style: none;
-		color: #fff;
+  ul {
+    padding-top: 0.25em;
+  }
 
-		a:link, a:visited, a:hover {
-			color: #fff;
-		}
+  ul li {
+    padding: 0.25em 0.5em 0 0.5em;
+    list-style: none;
+    color: #fff;
+    transition: all 250ms;
 
-		img {
-			width: 20px;
-			height: 20px;
-			// margin: 2px 0;
-		}
-	}
+    a:link, a:visited, a:hover {
+      color: #fff;
+    }
+
+    &:hover {
+      background: getColor(denim);
+    }
+
+    span {
+      vertical-align: top;
+      margin-right: 0.5em;
+    }
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
 
-.dropdown-list-show {
-	display: inline-block;
+.dropdown__list--active {
+  display: block;
 }
