refactor(footer): change cc-by image/link and add glossary link

--- a/components/footer/footer-style.scss
+++ b/components/footer/footer-style.scss
@@ -78,3 +78,13 @@
     color: getColor(mine-shaft);
   }
 }
+
+.footer__license {
+  display: inline-block;
+  height: 25px;
+
+  img {
+    width: auto;
+    height: 100%;
+  }
+}
