--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -102,24 +102,19 @@
     &.tip {
       background-color: #DCF2FD;
       color: #618ca0;
-      .tip-content::before {
-        content: 'ℹ';
-        font-style: normal;
-      }
     }
+
     &.warning {
       background-color: #fbedb7;
       color: #8c8466;
-      .tip-content::before {
-        content: '⚠';
-        font-style: normal;
-      }
     }
+
     &.todo {
       background-color: #fbddcd;
       color: #907a6e;
+
       .tip-content::before {
-        content: '[TODO]';
+        content: '[TODO]: ';
         font-style: normal;
       }
     }
