Implementation of the feature, pending review

--- a/components/dropdown/dropdown-style.scss
+++ b/components/dropdown/dropdown-style.scss
@@ -9,6 +9,7 @@
 .dropdown__language {
   width: 20px;
   height: 20px;
+  margin-right: 0.25em;
   vertical-align: middle;
 }
 
@@ -24,19 +25,20 @@
   display: none;
   position: absolute;
   top: 100%;
-  right: 100%;
-  right: 0;
+  left: 0;
   margin: auto;
   background-color: #2B3A42;
   z-index: 1;
-  text-align: center;
+  width: 100px;
 
   ul {
+    width: 100px;
     padding-top: 0.25em;
   }
 
   ul li {
-    padding: 0.25em 0.5em 0 0.5em;
+    width: 100%;
+    padding: 0.25em 0.5em;
     list-style: none;
     color: #fff;
     transition: all 250ms;
@@ -51,12 +53,7 @@
 
     span {
       vertical-align: top;
-      margin-right: 0.5em;
-    }
-
-    img {
-      width: 20px;
-      height: 20px;
+      text-align: left;
     }
   }
 }
